# yosuke

./: Cargo.toml  README.md  build.sh  build_linux.sh  build_macOS.sh  build_windows.bat  build_windows_temp.bat
.github/workflows/: rust.yml
assets/: yosuke.icns
client/: Cargo.toml
client/src/: handler.rs  input.rs  main.rs  threading.rs
client/src/capture/: jpeg.rs  mic.rs  mod.rs  screen.rs  webcam.rs
client/src/commands/: computer_info.rs  elevate.rs  message_box.rs  mod.rs  powershell.rs
client/src/commands/capture/: screen.rs
server/: Cargo.toml  build.rs
server/src/: main.rs  settings.rs  types.rs
server/src/builder/: build.rs  mod.rs
server/src/manager/: client.rs  mod.rs  types.rs
server/src/net/: handler.rs  listen.rs  mod.rs
server/src/ui/: client.rs  mod.rs  switcher.rs  updates.rs  video.rs  view.rs
server/src/ui/client/: mod.rs  types.rs  video.rs
server/src/ui/pages/: builder.rs  mod.rs  sessions.rs
server/src/ui/windows/: message_box.rs  mod.rs  screen.rs  shell.rs  webcam.rs
shared/: Cargo.toml
shared/src/: commands.rs  crypto.rs  input.rs  lib.rs  net.rs  types.rs
