[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
bincode = "2.0.1"
eframe = "0.32.3"
egui = "0.32.3"
egui-notify = "0.20.0"
egui_extras = { version = "0.32.3", features = ["syntect"] }
hex = "0.4.3"
image = { version = "0.25.8", features = ["webp"] }
rfd = "0.15.4"
shared = { path = "../shared" }
tokio = { version = "1.47.1", features= ["full"] }
tokio-util = { version = "0.7.16", features = ["compat"] }

[package.metadata.bundle]
name = "Yosuke"
identifier = "uk.s1no.yosuke"
icon = ["../assets/yosuke.icns"]

[build-dependencies]
[build-dependencies.winres]
version = "0.1.12"
optional = true
[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
